--- a/package.json
+++ b/package.json
@@ -21,8 +21,23 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "bootstrap": "^4.0.0-alpha.6",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "express-flash": "0.0.2",
+    "express-myconnection": "^1.0.4",
+    "express-session": "^1.15.6",
+    "express-validator": "^4.3.0",
+    "html": "^1.0.0",
+    "jquery": "^2.2.4",
+    "method-override": "^2.3.10",
+    "mysql": "^2.15.0",
+    "ng2-filter-pipe": "^0.1.10",
     "rxjs": "^5.5.6",
+    "tether": "^1.4.3",
+    "underscore": "^1.8.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -32,6 +47,7 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/underscore": "^1.7.33",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
