--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery": "^2.2.4",
     "method-override": "^2.3.10",
     "mysql": "^2.15.0",
+    "ng2-cookies": "^1.0.12",
     "ng2-filter-pipe": "^0.1.10",
     "rxjs": "^5.5.6",
     "tether": "^1.4.3",
