--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "angular2-modal": "^3.0.3",
     "bootstrap": "^4.0.0-alpha.6",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
@@ -36,6 +37,8 @@
     "mysql": "^2.15.0",
     "ng2-cookies": "^1.0.12",
     "ng2-filter-pipe": "^0.1.10",
+    "ng2-modal": "0.0.25",
+    "ngx-modal": "0.0.29",
     "rxjs": "^5.5.6",
     "tether": "^1.4.3",
     "underscore": "^1.8.3",
