--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jquery": "^2.2.4",
     "method-override": "^2.3.10",
     "mysql": "^2.15.0",
+    "ng2-bs4-modal": "^0.5.1",
     "ng2-cookies": "^1.0.12",
     "ng2-filter-pipe": "^0.1.10",
     "ng2-modal": "0.0.25",
