--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "rxjs": "^5.5.6",
     "tether": "^1.4.3",
     "underscore": "^1.8.3",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "mydatepicker": "^1.10.1"
   },
   "devDependencies": {
     "@angular/cli": "1.6.4",
