--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "express-validator": "^4.3.0",
     "html": "^1.0.0",
     "jquery": "^2.2.4",
+    "jsreport-client": "^0.4.1",
     "method-override": "^2.3.10",
+    "mydatepicker": "^1.10.2",
     "mysql": "^2.15.0",
     "ng2-bs4-modal": "^0.5.1",
     "ng2-cookies": "^1.0.12",
@@ -43,8 +45,7 @@
     "rxjs": "^5.5.6",
     "tether": "^1.4.3",
     "underscore": "^1.8.3",
-    "zone.js": "^0.8.19",
-    "mydatepicker": "^1.10.1"
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.6.4",
