--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host=0.0.0.0",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,21 +12,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0",
-    "@angular/common": "^5.1.0",
-    "@angular/compiler": "^5.1.0",
-    "@angular/core": "^5.1.0",
-    "@angular/forms": "^5.1.0",
-    "@angular/http": "^5.1.0",
-    "@angular/platform-browser": "^5.1.0",
-    "@angular/platform-browser-dynamic": "^5.1.0",
-    "@angular/router": "^5.1.0",
+    "@angular/animations": "^5.2.9",
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/http": "^5.2.9",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/router": "^5.2.9",
+    "angular2-http-event": "^1.0.0",
     "angular2-modal": "^3.0.3",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0",
+    "child_process": "^1.0.2",
     "cookie-parser": "^1.4.3",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.4",
     "cors": "^2.8.4",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "express-flash": "0.0.2",
     "express-myconnection": "^1.0.4",
     "express-session": "^1.15.6",
@@ -40,28 +42,31 @@
     "ng2-bs4-modal": "^0.5.1",
     "ng2-cookies": "^1.0.12",
     "ng2-filter-pipe": "^0.1.10",
+    "ng2-material-dropdown": "^0.8.2",
     "ng2-modal": "0.0.25",
     "ngx-modal": "0.0.29",
-    "rxjs": "^5.5.6",
+    "node-rfid": "^1.0.7",
+    "rc522-c7z": "0.0.8",
+    "rxjs": "^5.5.8",
     "tether": "^1.4.3",
     "underscore": "^1.8.3",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.23"
   },
   "devDependencies": {
     "@angular/cli": "1.6.4",
-    "@angular/compiler-cli": "^5.1.0",
-    "@angular/language-service": "^5.1.0",
-    "@types/jasmine": "~2.8.3",
+    "@angular/compiler-cli": "^5.2.9",
+    "@angular/language-service": "^5.2.9",
+    "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "@types/underscore": "^1.7.33",
-    "codelyzer": "^4.0.1",
+    "@types/node": "^6.0.103",
+    "@types/underscore": "^1.8.8",
+    "codelyzer": "^4.2.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
